6795362: 32bit server compiler leads to wrong results on solaris-x86

The C2 compiler leads to wrong results on solaris-i486 (32-bit) for a testcase given in the CR.

Reviewed-by: never, rasbold